--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to my page</title>
+    <title>Welcome to Paradise</title>
   </head>
   <body>
     <h1>This is a Getjo</h1>
