--- a/test.html
+++ b/test.html
@@ -1,7 +1,10 @@
+<button>Hello</button>
+<p>This is paragraph</p>
+<a href="https://platform.openai.com/account/api-keys" target="_blank">Platform AI Link</a>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Paradise</title>
+    <title>Welcome to Paradise</title
   </head>
   <body>
     <h1>This is a Getjo</h1>
