--- a/test2_(Basic CSS)/test2a.html
+++ b/test2_(Basic CSS)/test2a.html
@@ -1,5 +1,5 @@
 <style>
-    .RN-button{
+    .Uber-button{
         background-color: black;
         color: white;
         height: 36px;
@@ -7,6 +7,6 @@
     }
 </style>
 
-<button class="RN-button">
+<button class="Uber">
     Request now
 </button>
