--- a/test2_(Basic CSS)/test2b.html
+++ b/test2_(Basic CSS)/test2b.html
@@ -1,5 +1,5 @@
 <style>
-    .atc-button{
+    .Amazon-button{
         background-color: rgb(255, 216, 20);
         border-radius: 18px;
         color: black;
@@ -10,6 +10,6 @@
     }
 </style>
 
-<button class="atc-button">
+<button class="Amazon">
     Add to Cart
 </button>
